dropdown item overflow fix

--- a/src/AutoComplete/AutoComplete.scss
+++ b/src/AutoComplete/AutoComplete.scss
@@ -54,6 +54,7 @@ $text: #222222;
         display: flex;
         padding: 1rem;
         width: 100%;
+        word-break: break-all;
       }
 
       a:focus,
